--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,19 @@
     <string name="new_incoming_link">New incoming link</string>
     <string name="default_notification_channel_name">General</string>
     <string name="no_token">No token</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >8 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_name">Name</string>
+    <string name="action_sign_up">Register</string>
+    <string name="prompt_password_confirm">Confirm password</string>
+    <string name="title_activity_register">Register</string>
+    <string name="action_sign_out">Sign out</string>
 </resources>
